--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -1,7 +1,8 @@
-.book-list{
-    display: flex;
-    flex-direction: wrap;
-    gap: 1.5rem;
-    padding: 0.5rem;
-	justify-content: center;
-}
+.book-list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	padding: 2rem 1rem;
+  }
+  
